// Minimal subset of the Perfetto trace proto format.
// Field numbers match the official Perfetto protos for binary compatibility.
// See: https://android.googlesource.com/platform/external/perfetto/+/refs/heads/main/protos/perfetto/trace/

syntax = "proto2";

package perfetto.protos;

message Trace {
  repeated TracePacket packet = 1;
}

message TracePacket {
  optional uint64 timestamp = 8;
  optional uint32 timestamp_clock_id = 58;

  oneof data {
    InternedData interned_data = 12;
    TrackDescriptor track_descriptor = 60;
    TrackEvent track_event = 11;
    PerfSample perf_sample = 66;
  }

  oneof optional_trusted_packet_sequence_id {
    uint32 trusted_packet_sequence_id = 10;
  }

  optional uint32 sequence_flags = 13;
}

message InternedData {
  repeated InternedString build_ids = 16;
  repeated InternedString mapping_paths = 17;
  repeated InternedString function_names = 5;
  repeated Mapping mappings = 19;
  repeated Frame frames = 6;
  repeated Callstack callstacks = 7;
  repeated EventName event_names = 2;
  repeated EventCategory event_categories = 1;
}

message InternedString {
  optional uint64 iid = 1;
  optional bytes str = 2;
}

message EventName {
  optional uint64 iid = 1;
  optional string name = 2;
}

message EventCategory {
  optional uint64 iid = 1;
  optional string name = 2;
}

message Mapping {
  optional uint64 iid = 1;
  optional uint64 build_id = 2;
  optional uint64 exact_offset = 3;
  optional uint64 start_offset = 4;
  optional uint64 start = 5;
  optional uint64 end = 6;
  optional uint64 load_bias = 7;
  repeated uint64 path_string_ids = 8;
}

message Frame {
  optional uint64 iid = 1;
  optional uint64 function_name_id = 2;
  optional uint64 mapping_id = 3;
  optional uint64 rel_pc = 4;
}

message Callstack {
  optional uint64 iid = 1;
  repeated uint64 frame_ids = 2;
}

message PerfSample {
  optional uint32 cpu = 1;
  optional uint32 pid = 2;
  optional uint32 tid = 3;
  optional uint64 callstack_iid = 4;

  enum CpuMode {
    UNKNOWN = 0;
    KERNEL = 1;
    USER = 2;
    HYPERVISOR = 3;
  }
  optional CpuMode cpu_mode = 5;
}

message TrackDescriptor {
  optional uint64 uuid = 1;
  optional uint64 parent_uuid = 5;
  optional string name = 2;
  optional ProcessDescriptor process = 3;
  optional ThreadDescriptor thread = 4;
  optional CounterDescriptor counter = 8;
}

message ProcessDescriptor {
  optional int32 pid = 1;
  repeated string cmdline = 2;
  optional string process_name = 6;
}

message ThreadDescriptor {
  optional int32 pid = 1;
  optional int32 tid = 2;
  optional string thread_name = 5;
}

message CounterDescriptor {
  enum Unit {
    UNIT_UNSPECIFIED = 0;
    UNIT_COUNT = 5;
  }
  optional Unit unit = 3;
  optional bool is_incremental = 4;
}

message TrackEvent {
  optional uint64 track_uuid = 11;

  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_SLICE_BEGIN = 1;
    TYPE_SLICE_END = 2;
    TYPE_INSTANT = 3;
    TYPE_COUNTER = 4;
  }
  optional Type type = 9;

  oneof name_field {
    uint64 name_iid = 10;
    string name = 23;
  }

  optional int64 counter_value = 30;
  optional double double_counter_value = 44;
  repeated uint64 category_iids = 3;
}
